data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1938.wast
;; 9. **Test Description**:    - **Constraint Checked**: Handling zero and non-zero conditions of `br_if`.    - **Details**: Implement a series of `br_table` tests where `br_if` conditions fluctuate between zero and non-zero, validating if branches are correctly taken.    - **Relation to Edge Case**: Ensures accurate conditional branching based on stack value, maintaining correctness in branch decision-making.

(assert_invalid
  (module (func $test-conditional-branch
    (block
      (i32.const 1)
      (br_if 0 (i32.const 0)) ; Condition is false, no branch
      (i32.const 2) 
      (br_if 0 (i32.const 1)) ; Condition is true, branch taken
      (drop)
    )
  ))
  "type mismatch"
)